--- a/resources/css/main/test.css
+++ b/resources/css/main/test.css
@@ -10,7 +10,7 @@
 *       content
 *
 *   dashboard:
-*       content, content2
+*       all
 *
 *   [manageDesk, manageRole, manageUser]:
 *       all
