--- a/resources/css/main/content.css
+++ b/resources/css/main/content.css
@@ -143,7 +143,7 @@
 }
 
 #content main .table-data .order table tr td .status.process {
-    background: var(--yellow);
+    background: var(--light-yellow);
 }
 
 #content main .table-data .order table tr td .status.pending {
