--- a/resources/css/main/default.css
+++ b/resources/css/main/default.css
@@ -201,7 +201,7 @@ body {
     z-index: 10;
 }
 
-#content nav::before {
+/* #content nav::before {
     content: '';
     position: absolute;
     width: 40px;
@@ -210,7 +210,7 @@ body {
     left: 0;
     border-radius: 10%;
     box-shadow: -20px -20px 0 var(--light);
-}
+} */
 
 #content nav a {
     color: var(--dark);
